# capsule

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  build.rs  codecov.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: cover.yml  main.yml
bench/: Cargo.toml  build.rs  combinators.rs  mbuf.rs  packets.rs
bench/benches/: combinators.rs  mbuf.rs  operators.rs  packets.rs
bench/src/: main.rs
core/: Cargo.toml  build.rs
core/examples/pktdump/: Cargo.toml  build.rs  main.rs  pktdump.toml
core/examples/signals/: Cargo.toml  main.rs
core/examples/skeleton/: Cargo.toml  skeleton.toml
core/src/: config.rs  ffi.rs  lib.rs  lpm.rs  metrics.rs  pcap.rs  settings.rs
core/src/batch/: emit.rs  filter.rs  filter_map.rs  for_each.rs  group_by.rs  inspect.rs  map.rs  mod.rs  poll.rs  replace.rs  rxtx.rs  send.rs
core/src/dpdk/: kni.rs  mbuf.rs  mempool.rs  mod.rs  port.rs  stats.rs
core/src/ffi/: dpdk.rs  mod.rs  pcap.rs
core/src/net/: mac.rs  mod.rs
core/src/net/cidr/: mod.rs  v4.rs  v6.rs
core/src/packets/: arp.rs  checksum.rs  ethernet.rs  mbuf.rs  mod.rs  size_of.rs  tcp.rs  types.rs  udp.rs
core/src/packets/gre/: ip4gre.rs  mod.rs
core/src/packets/gtpu/: ip4gtpu.rs  mod.rs
core/src/packets/icmp/: mod.rs
core/src/packets/icmp/v4/: echo_reply.rs  echo_request.rs  mod.rs  redirect.rs  time_exceeded.rs
core/src/packets/icmp/v6/: destination_unreachable.rs  echo_reply.rs  echo_request.rs  mod.rs  time_exceeded.rs  too_big.rs  unreachable.rs
core/src/packets/icmp/v6/ndp/: mod.rs  neighbor_advert.rs  neighbor_solicit.rs  redirect.rs  router_advert.rs  router_solicit.rs
core/src/packets/icmp/v6/ndp/options/: link_layer_addr.rs  mod.rs  mtu.rs  prefix_info.rs  redirected.rs
core/src/packets/ip/: mod.rs  v4.rs
core/src/packets/ip/tunnels/: ip6in4.rs  ipip.rs  mod.rs
core/src/packets/ip/v6/: fragment.rs  mod.rs  srh.rs
core/src/packets2/: checksum.rs  ethernet.rs  mbuf.rs  mod.rs  size_of.rs  udp.rs
core/src/packets2/ip/: mod.rs  v4.rs
core/src/rt2/: config.rs  lcore.rs  mempool.rs  mod.rs  port.rs
core/src/runtime/: config.rs  core_map.rs  lcore.rs  mempool.rs  mempool_map.rs  mod.rs  pcap_dump.rs  port.rs
core/src/testils/: byte_arrays.rs  criterion.rs  mod.rs  packet.rs  rvg.rs  strategy_valgen.rs
core/src/testils/proptest/: arbitrary.rs  mod.rs  strategy.rs
examples/: Cargo.toml  build.rs
examples/kni/: Cargo.toml  README.md  kni.toml  main.rs
examples/nat64/: Cargo.toml  README.md  main.rs  nat64.toml
examples/ping4d/: Cargo.toml  README.md  echo.pcap  main.rs  ping4d.toml  suppressions.txt
examples/ping6d/: Cargo.toml  build.rs  main.rs  ping6d.toml
examples/pktdump/: Cargo.toml  README.md  build.rs  main.rs  pktdump.toml
examples/signals/: Cargo.toml  README.md  main.rs  signals.toml
examples/skeleton/: Cargo.toml  README.md  build.rs  main.rs  skeleton.toml
examples/syn-flood/: Cargo.toml  README.md  build.rs  main.rs  syn-flood.toml
ffi/: Cargo.toml  build.rs
ffi/src/: bindings.h  bindings_rustdoc.rs  lib.rs  rte.h  rte.rs  shim.c  shim.h
framework/src/new_operators/: filter_batch.rs  foreach_batch.rs  groupby_batch.rs  map_batch.rs  mod.rs  packet_batch.rs  queue_batch.rs  receive_batch.rs  send_batch.rs
framework/src/operators/: emit_batch.rs  filter_batch.rs  filtermap_batch.rs  foreach_batch.rs  groupby_batch.rs  map_batch.rs  mod.rs  queue_batch.rs  receive_batch.rs  send_batch.rs
framework/src/packets/: buffer.rs  checksum.rs  ethernet.rs  mac.rs  mod.rs  raw.rs  tcp.rs  udp.rs
framework/src/packets/icmp/: mod.rs
framework/src/packets/icmp/v4/: mod.rs
framework/src/packets/icmp/v6/: echo_reply.rs  echo_request.rs  mod.rs  too_big.rs
framework/src/packets/icmp/v6/ndp/: mod.rs  neighbor_advert.rs  neighbor_solicit.rs  options.rs  router_advert.rs  router_solicit.rs
framework/src/packets/icmp/v6/ndp/options/: link_layer_addr.rs  mod.rs  mtu.rs  prefix_info.rs
framework/src/packets/ip/: mod.rs  v4.rs  v6.rs
framework/src/packets/ip/v6/: mod.rs  srh.rs
macros/: Cargo.toml
macros/src/: derive_packet.rs  lib.rs
perf/: Cargo.toml  build.rs
perf/src/: main.rs
scripts/: devbind.sh  dpdk.sh  kmod.sh  rustup.sh  ubuntu.sh
setup/: rustup.sh  ubuntu.sh
src/: main.rs
src/core/: Cargo.toml  build.rs  core_map.rs  ffi.rs  lib.rs  macros.rs  mempool_map.rs  runtime.rs  settings.rs
src/core/batch/: filter.rs  filter_map.rs  group_by.rs  map.rs  mod.rs  rxtx.rs  send.rs
src/core/dpdk/: mbuf.rs  mempool.rs  mod.rs  port.rs
src/core/net/: mac.rs  mod.rs
src/core/packets/: buffer.rs  checksum.rs  ethernet.rs  mbuf.rs  mod.rs  raw.rs  tcp.rs  udp.rs
src/core/packets/icmp/: mod.rs
src/core/packets/icmp/v4/: mod.rs
src/core/packets/icmp/v6/: echo_reply.rs  echo_request.rs  mod.rs  too_big.rs
src/core/packets/icmp/v6/ndp/: mod.rs  neighbor_advert.rs  neighbor_solicit.rs  router_advert.rs  router_solicit.rs
src/core/packets/icmp/v6/ndp/options/: link_layer_addr.rs  mod.rs  mtu.rs  prefix_info.rs
src/core/packets/ip/: mod.rs  v4.rs
src/core/packets/ip/v6/: mod.rs  srh.rs
src/core/runtime/: core_map.rs  mempool_map.rs  mod.rs
src/core/testil/: mod.rs
src/core/testils/: mod.rs  packet.rs
src/core/testils/proptest/: arbitrary.rs  mod.rs
src/dpdk/: mbuf.rs  mempool.rs  mod.rs  port.rs  rte.h  rte.rs  shim.c  shim.h
src/examples/pktdump/: Cargo.toml  build.rs  main.rs
src/examples/signals/: Cargo.toml  main.rs
src/examples/skeleton/: Cargo.toml  main.rs  skeleton.toml
src/ffi/: Cargo.toml  build.rs  lib.rs  rte.h  shim.c  shim.h
src/macros/: Cargo.toml  lib.rs
