[package]
name = "nb2-bench"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = []
publish = false
edition = "2018"
build = "build.rs"
description = "benchmarks for nb2"
repository = "https://github.com/williamofockham/nb2/bench"
readme = "../README.md"
categories = []

[dev-dependencies]
criterion = "0.3"
proptest = "0.9"

[dependencies]
nb2 = { path = "../core", features = ["testils"] }

[[bench]]
name = "packets"
harness = false

[[bench]]
name = "combinators"
harness = false

[[bench]]
name = "mbuf"
harness = false
