[package]
name = "capsule-bench"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
keywords = []
publish = false
edition = "2018"
description = "Benchmarks for Capsule"
categories = []

[dev-dependencies]
capsule = { path = "../core", features = ["testils"] }
criterion = "0.3"
proptest = "0.9"

[[bench]]
name = "packets"
path = "packets.rs"
harness = false

[[bench]]
name = "combinators"
path = "combinators.rs"
harness = false

[[bench]]
name = "mbuf"
path = "mbuf.rs"
harness = false
