[package]
name = "capsule"
version = "0.1.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/capsule/capsule"
keywords = ["nfv", "network-functions", "packet-processing", "packet-parsing", "dpdk"]
categories = ["network-programming", "development-tools::ffi"]
documentation = "https://docs.rs/capsule/0.1.0/capsule/"
description = """
A framework for network function development. Written in Rust, inspired by
NetBricks and built on Intel's Data Plane Development Kit.
"""

[lib]
name = "capsule"
path = "src/lib.rs"
doctest = false

[dependencies]
capsule-ffi = { path = "../ffi" }
capsule-macros = { path = "../macros" }
clap = "2.33"
criterion = { version = "0.3", optional = true }
failure = "0.1"
fallible-iterator = "0.2"
futures-preview = "=0.3.0-alpha.19"
libc = "0.2"
metrics-core = { version = "0.5", optional = true }
metrics-runtime = { version = "0.12", optional = true, default-features = false }
once_cell = "1.2"
proptest = { version = "0.9", optional = true }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = "=0.2.0-alpha.6"
tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread", "threadpool"] }
tokio-net = { version = "=0.2.0-alpha.6", features = ["signal"] }
tokio-timer = "=0.3.0-alpha.6"
toml = "0.5"
tracing = "0.1"

[dev-dependencies]
criterion = "0.3"
proptest = { version = "0.9", default-features = false, features = ["default-code-coverage"] }

[features]
default = ["metrics"]
full = ["metrics", "pcap-dump", "testils"]
metrics = ["metrics-core", "metrics-runtime"]
pcap-dump = []
testils = ["criterion", "proptest"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
