[package]
name = "capsule"
version = "0.2.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "../README.md"
repository = "https://github.com/capsule-rs/capsule"
keywords = ["nfv", "network-functions", "packet-processing", "packet-parsing", "dpdk"]
categories = ["network-programming", "development-tools::ffi"]
documentation = "https://docs.rs/capsule/0.1.4/capsule/"
description = """
A framework for network function development. Written in Rust, inspired by
NetBricks and built on Intel's Data Plane Development Kit.
"""

[lib]
name = "capsule"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0"
async-channel = "1.6"
async-executor = "1.4"
capsule-ffi = { version = "0.2.0", path = "../ffi" }
capsule-macros = { version = "0.2.0", path = "../macros" }
clap = "2.33"
criterion = { version = "0.3", optional = true }
futures-lite = "1.11"
libc = "0.2"
metrics = "0.14"
once_cell = "1.7"
proptest = { version = "1.0", optional = true }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"

[dev-dependencies]
criterion = "0.3"
proptest = { version = "1.0", default-features = false, features = ["default-code-coverage"] }

[features]
default = []
compile_failure = []    # compiler tests to check mutability rules are followed
full = ["pcap-dump", "testils"]
pcap-dump = []
testils = ["criterion", "proptest"]

[package.metadata.docs.rs]
features = ["capsule-ffi/rustdoc", "full"]
rustdoc-args = ["--cfg", "docsrs"]
