[package]
name = "capsule-ffi"
version = "18.11.6"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"
links = "dpdk"
publish = false
description = """
Capsule FFI bindings for native libraries.
"""

[lib]
name = "capsule_ffi"
doctest = false

[build-dependencies]
bindgen = "0.53"
cc = "1.0"
libc = "0.2"
