[package]
name = "nb2-macros"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = []
edition = "2018"
description = "Macro extensions for nb2"
repository = "https://github.com/williamofockham/nb2/macros"
readme = "../README.md"
categories = []

[lib]
name = "nb2_macros"
proc-macro = true
doctest = false

[dependencies]
darling ="0.10"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
