[package]
name = "kni"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = []
edition = "2018"
build = "build.rs"
description = "Kernel NIC interface example"
repository = "https://github.com/williamofockham/nb2/tree/master/examples/kni"
readme = "README.md"
categories = []

[[bin]]
name = "kni"
path = "main.rs"
doctest = false

[dependencies]
failure = "0.1"
metrics-core = "0.5"
metrics-runtime = "0.12"
nb2 = { path = "../../core" }
tracing = "0.1"
tracing-subscriber = "0.1"
