[package]
name = "kni"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
keywords = []
publish = false
edition = "2018"
description = "Kernel NIC interface example"
readme = "README.md"
categories = []

[[bin]]
name = "kni"
path = "main.rs"
doctest = false

[dependencies]
capsule = { path = "../../core" }
failure = "0.1"
metrics-core = "0.5"
metrics-runtime = "0.12"
tracing = "0.1"
tracing-subscriber = "0.1"
