[package]
name = "kni"
version = "0.1.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
Kernel NIC interface example.
"""

[[bin]]
name = "kni"
path = "main.rs"
doctest = false

[dependencies]
anyhow = "1.0"
capsule = { version = "0.1", path = "../../core" }
colored = "2.0"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
