[package]
name = "nat64"
version = "0.1.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
IPv6 to IPv4 NAT gateway example.
"""

[[bin]]
name = "nat64"
path = "main.rs"
doctest = false

[dependencies]
anyhow = "1.0"
capsule = { version = "0.1", path = "../../core" }
chashmap = "2.2"
once_cell = "1.2"
tracing = "0.1"
tracing-subscriber = "0.2"
