[package]
name = "nat64"
version = "0.1.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
IPv6 to IPv4 NAT gateway example.
"""

[[bin]]
name = "nat64"
path = "main.rs"
doctest = false

[dependencies]
anyhow = "1.0"
bimap = "0.6"
capsule = { version = "0.1", path = "../../core" }
colored = "2.0"
once_cell = "1.7"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
