[package]
name = "ping4d"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = []
edition = "2018"
build = "build.rs"
description = "Ping4 daemon example"
repository = "https://github.com/williamofockham/nb2/tree/master/examples/ping4d"
readme = "README.md"
categories = []

[[bin]]
name = "ping4d"
path = "main.rs"
doctest = false

[dependencies]
failure = "0.1"
nb2 = { path = "../../core" }
tracing = "0.1"
tracing-subscriber = "0.1"
