[package]
name = "ping4d"
version = "0.1.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
Ping4 daemon example.
"""

[[bin]]
name = "ping4d"
path = "main.rs"
doctest = false

[dependencies]
capsule = { version = "0.1", path = "../../core" }
failure = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
