[package]
name = "ping6d"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
keywords = []
edition = "2018"
build = "build.rs"
description = "Icmp V6 echo response on packets example"
categories = []

[[bin]]
name = "ping6d"
path = "main.rs"
doctest = false

[dependencies]
capsule = { path = "../../core" }
failure = "0.1"
tracing = "0.1"
tracing-subscriber = "0.1"
