[package]
name = "pktdump"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
keywords = ["dpdk", "nfv"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "pktdump"
path = "main.rs"
doctest = false

[dependencies]
capsule = { path = "../../core" }
colored = "1.8"
failure = "0.1"
tracing = "0.1"
tracing-subscriber = "0.1"
