[package]
name = "pktdump"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = []
edition = "2018"
build = "build.rs"
description = "Packet dump example"
repository = "https://github.com/williamofockham/nb2/tree/master/examples/pktdump"
readme = "README.md"
categories = []

[[bin]]
name = "pktdump"
path = "main.rs"
doctest = false

[dependencies]
colored = "1.8"
failure = "0.1"
nb2 = { path = "../../core" }
tracing = "0.1"
tracing-subscriber = "0.1"
