[package]
name = "signals"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
keywords = []
publish = false
edition = "2018"
build = "build.rs"
description = "Linux signal handling example"
readme = "README.md"
categories = []

[[bin]]
name = "signals"
path = "main.rs"
doctest = false

[dependencies]
capsule = { path = "../../core" }
failure = "0.1"
tracing = "0.1"
tracing-subscriber = "0.1"
