[package]
name = "skeleton"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
Base skeleton example.
"""

[[bin]]
name = "skeleton"
path = "main.rs"
doctest = false

[dependencies]
capsule = { version = "0.1", path = "../../core" }
failure = "0.1"
tracing = "0.1"
tracing-subscriber = "0.1"
