[package]
name = "skeleton"
version = "0.2.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
Base skeleton example.
"""

[[bin]]
name = "skeleton"
path = "main.rs"
doctest = false

[dependencies]
anyhow = "1.0"
capsule = { version = "0.2", path = "../../core" }
tracing = "0.1"
tracing-subscriber = "0.2"
