[package]
name = "syn-flood"
version = "0.1.0"
authors = ["Capsule Developers <capsule-dev@googlegroups.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false
readme = "README.md"
description = """
TCP SYN flood example.
"""

[[bin]]
name = "synflood"
path = "main.rs"
doctest = false

[dependencies]
anyhow = "1.0"
capsule = { version = "0.1", path = "../../core" }
metrics-core = "0.5"
metrics-observer-yaml = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
