[package]
name = "capsule"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
keywords = ["dpdk", "nfv"]
edition = "2018"

[lib]
name = "capsule"
path = "lib.rs"
doctest = false

[dependencies]
clap = "2.33"
config = "0.9"
capsule-ffi = { path = "../ffi" }
capsule-macros = { path = "../macros" }
failure = "0.1"
libc = "0.2"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = "=0.2.0-alpha.6"
tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread", "threadpool"] }
tokio-timer = "=0.3.0-alpha.6"
