[package]
name = "nb2"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = ["dpdk", "nfv"]
edition = "2018"

[lib]
name = "nb2"
path = "lib.rs"
doctest = false

[dependencies]
clap = "2.33"
config = "0.9"
failure = "0.1"
libc = "0.2"
nb2-ffi = { path = "../ffi" }
nb2-macros = { path = "../macros" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = "=0.2.0-alpha.6"
tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread", "threadpool"] }
tokio-timer = "=0.3.0-alpha.6"
tracing = "0.1"
