[package]
name = "capsule"
version = "0.1.0"
authors = ["Capsule Developers <occam_engineering@comcast.com>"]
license = "Apache-2.0"
keywords = ["dpdk", "nfv"]
edition = "2018"

[lib]
name = "capsule"
path = "lib.rs"
doctest = false

[dependencies]
capsule-ffi = { path = "../ffi" }
capsule-macros = { path = "../macros" }
clap = "2.33"
config = "0.9"
failure = "0.1"
fallible-iterator = "0.2"
futures-preview = "=0.3.0-alpha.19"
libc = "0.2"
proptest = { version = "0.9", optional = true }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = "=0.2.0-alpha.6"
tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread", "threadpool"] }
tokio-net = { version = "=0.2.0-alpha.6", features = ["signal"] }
tokio-timer = "=0.3.0-alpha.6"
tracing = "0.1"

[dev-dependencies]
proptest = "0.9"

[features]
default = []
testils = ["proptest"]
