[package]
name = "pktdump"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = ["dpdk", "nfv"]
edition = "2018"

[[bin]]
name = "pktdump"
path = "main.rs"
doctest = false

[dependencies]
colored = "1.8"
failure = "0.1"
nb2 = { path = "../../" }
tracing = "0.1"
tracing-subscriber = "0.1"
