[package]
name = "skeleton"
version = "0.1.0"
authors = ["William of Ockham <occam_engineering@comcast.com>"]
license = "TBD"
keywords = ["dpdk", "nfv"]
edition = "2018"

[[bin]]
name = "skeleton"
path = "main.rs"
doctest = false

[dependencies]
failure = "0.1"
log = "0.4"
nb2 = { path = "../../core" }
simplelog = "0.7"
